--- a/package.json
+++ b/package.json
@@ -16,8 +16,14 @@
     "vue-router": "^4.4.0"
   },
   "devDependencies": {
+    "@types/node": "^20.14.9",
+    "@types/webpack-env": "^1.18.5",
+    "@typescript-eslint/eslint-plugin": "^7.15.0",
+    "@typescript-eslint/parser": "^7.15.0",
     "@vitejs/plugin-vue": "^5.0.5",
+    "@vue/cli-plugin-typescript": "^5.0.8",
     "sass": "^1.77.6",
+    "typescript": "^5.5.3",
     "vite": "^5.3.1"
   }
 }
