--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "apexcharts": "^3.53.0",
     "axios": "^1.7.4",
     "bootstrap": "^5.3.3",
     "element-plus": "^2.7.7",
@@ -17,6 +18,7 @@
     "vue": "^3.4.29",
     "vue-multiselect": "^3.0.0-beta.3",
     "vue-router": "^4.4.0",
+    "vue3-apexcharts": "^1.6.0",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
