--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.3",
     "element-plus": "^2.7.7",
     "remixicon": "^4.3.0",
+    "sweetalert2": "^11.14.4",
     "vue": "^3.4.29",
     "vue-multiselect": "^3.0.0-beta.3",
     "vue-router": "^4.4.0",
